Commit 2 - Task 2 is done

--- a/src/main/WEBAPP/сhapter1/task4.html
+++ b/src/main/WEBAPP/сhapter1/task4.html
@@ -94,6 +94,7 @@
             <a href="https://ru.wikipedia.org/wiki/Internet_Explorer" class="non">Internet Explorer</a></b></i>
             и <i><b><a href="https://ru.wikipedia.org/wiki/Safari" class="non">Safari</a></b></i>.
         </p>
+        <p><a href="../main_page.html">Главная страница</a></p>
     </div>
         </td>
         <td valign="top" width="50%"></td>
