--- a/src/main/WEBAPP/main_page.html
+++ b/src/main/WEBAPP/main_page.html
@@ -1,5 +1,3 @@
-
-
 <!-- !DOCTYPE - описание типа документа -->
 <!DOCTYPE html>
 <!-- html - контейнер, содержащий всю начинку веб-страницы -->
@@ -16,14 +14,28 @@
 <!-- body - контейнер для отображаемого пользователю содержимого -->
 <body>
     <h1>Ход изучения HTML5/CSS3</h1>
+
     <h2>Тема 1</h2>
-    <p><a href="сhapter1/additional_task.html">Дополнительное задание</a></p>
 
     <p><a href="сhapter1/task2.html">Задание 2</a></p>
 
     <p><a href="сhapter1/task3.html">Задание 3</a></p>
 
     <p><a href="сhapter1/task4.html">Задание 4</a></p>
+
+    <p><a href="сhapter1/additional_task.html">Дополнительное задание</a></p>
+
+    <h2>Тема 2</h2>
+
+    <p><a href="chapter2/task2.1.html">Задание 2.1</a></p>
+    <p><a href="chapter2/task2.2.html">Задание 2.2</a></p>
+
+    <p><a href="chapter2/task3.html">Задание 3</a></p>
+
+    <p><a href="chapter2/task4.html">Задание 4</a></p>
+
+    <p><a href="chapter2/additional_task.html">Дополнительное задание</a></p>
+
 </body>
 
 </html>
