--- a/src/main/WEBAPP/main_page.html
+++ b/src/main/WEBAPP/main_page.html
@@ -130,7 +130,7 @@
                 <p class="lead">DIV tag. Positioning of elements.</p>
                 <ul class="inline">
                     <li><a href="chapter5/task2.html" class="btn btn-large btn-info">Task 2</a></li>
-                    <li><a href="chapter5/task333.html" class="btn btn-large btn-info">Task 3???</a></li>
+                    <li><a href="chapter5/task3.html" class="btn btn-large btn-info">Task 3</a></li>
                     <li><a href="chapter5/additional_task.html" class="btn btn-large btn-info">Additionally</a></li>
                 </ul>
             </div>
